# Adapt3R

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
adapt3r/envs/libero/: __init__.py  benchmarks.py  domain_randomization_wrapper.py  libero_distractor_mu_creation.py  make_distractor_bddl.py  make_robot_change_init.py  pyproject.toml  runner.py  utils.py  wrappers.py
adapt3r/envs/libero/bddl_files/libero_10_distractor/: KITCHEN_DISTRACTOR_SCENE3_turn_on_the_stove_and_put_the_moka_pot_on_it.bddl  KITCHEN_DISTRACTOR_SCENE4_put_the_black_bowl_in_the_bottom_drawer_of_the_cabinet_and_close_it.bddl  KITCHEN_DISTRACTOR_SCENE6_put_the_yellow_and_white_mug_in_the_microwave_and_close_it.bddl  KITCHEN_DISTRACTOR_SCENE8_put_both_moka_pots_on_the_stove.bddl  LIVING_ROOM_DISTRACTOR_SCENE2_put_both_the_alphabet_soup_and_the_tomato_sauce_in_the_basket.bddl  LIVING_ROOM_DISTRACTOR_SCENE2_put_both_the_cream_cheese_box_and_the_butter_in_the_basket.bddl  STUDY_DISTRACTOR_SCENE1_pick_up_the_book_and_place_it_in_the_back_compartment_of_the_caddy.bddl
adapt3r/envs/libero/bddl_files/libero_90_distractor/: KITCHEN_DISTRACTOR_SCENE10_close_the_top_drawer_of_the_cabinet_and_put_the_black_bowl_on_top_of_it.bddl  KITCHEN_DISTRACTOR_SCENE10_put_the_black_bowl_in_the_top_drawer_of_the_cabinet.bddl  KITCHEN_DISTRACTOR_SCENE1_open_the_top_drawer_of_the_cabinet.bddl  KITCHEN_DISTRACTOR_SCENE1_put_the_black_bowl_on_the_plate.bddl  KITCHEN_DISTRACTOR_SCENE1_put_the_black_bowl_on_top_of_the_cabinet.bddl  KITCHEN_DISTRACTOR_SCENE2_put_the_black_bowl_at_the_back_on_the_plate.bddl  KITCHEN_DISTRACTOR_SCENE2_put_the_middle_black_bowl_on_top_of_the_cabinet.bddl  KITCHEN_DISTRACTOR_SCENE3_put_the_moka_pot_on_the_stove.bddl  KITCHEN_DISTRACTOR_SCENE3_turn_on_the_stove_and_put_the_frying_pan_on_it.bddl  KITCHEN_DISTRACTOR_SCENE4_close_the_bottom_drawer_of_the_cabinet.bddl  KITCHEN_DISTRACTOR_SCENE4_close_the_bottom_drawer_of_the_cabinet_and_open_the_top_drawer.bddl  KITCHEN_DISTRACTOR_SCENE4_put_the_black_bowl_on_top_of_the_cabinet.bddl  KITCHEN_DISTRACTOR_SCENE4_put_the_wine_bottle_on_the_wine_rack.bddl  KITCHEN_DISTRACTOR_SCENE5_put_the_black_bowl_in_the_top_drawer_of_the_cabinet.bddl  KITCHEN_DISTRACTOR_SCENE5_put_the_black_bowl_on_the_plate.bddl  KITCHEN_DISTRACTOR_SCENE5_put_the_black_bowl_on_top_of_the_cabinet.bddl  KITCHEN_DISTRACTOR_SCENE7_open_the_microwave.bddl  KITCHEN_DISTRACTOR_SCENE7_put_the_white_bowl_on_the_plate.bddl  KITCHEN_DISTRACTOR_SCENE7_put_the_white_bowl_to_the_right_of_the_plate.bddl  KITCHEN_DISTRACTOR_SCENE8_put_the_right_moka_pot_on_the_stove.bddl  KITCHEN_DISTRACTOR_SCENE9_put_the_frying_pan_on_the_cabinet_shelf.bddl  KITCHEN_DISTRACTOR_SCENE9_put_the_frying_pan_on_top_of_the_cabinet.bddl  KITCHEN_DISTRACTOR_SCENE9_put_the_white_bowl_on_top_of_the_cabinet.bddl  LIVING_ROOM_DISTRACTOR_SCENE1_pick_up_the_alphabet_soup_and_put_it_in_the_basket.bddl  LIVING_ROOM_DISTRACTOR_SCENE1_pick_up_the_cream_cheese_box_and_put_it_in_the_basket.bddl  LIVING_ROOM_DISTRACTOR_SCENE1_pick_up_the_ketchup_and_put_it_in_the_basket.bddl  LIVING_ROOM_DISTRACTOR_SCENE1_pick_up_the_tomato_sauce_and_put_it_in_the_basket.bddl  LIVING_ROOM_DISTRACTOR_SCENE2_pick_up_the_alphabet_soup_and_put_it_in_the_basket.bddl  LIVING_ROOM_DISTRACTOR_SCENE3_pick_up_the_ketchup_and_put_it_in_the_tray.bddl  LIVING_ROOM_DISTRACTOR_SCENE3_pick_up_the_tomato_sauce_and_put_it_in_the_tray.bddl  LIVING_ROOM_DISTRACTOR_SCENE4_pick_up_the_black_bowl_on_the_left_and_put_it_in_the_tray.bddl  LIVING_ROOM_DISTRACTOR_SCENE4_stack_the_right_bowl_on_the_left_bowl_and_place_them_in_the_tray.bddl  LIVING_ROOM_DISTRACTOR_SCENE5_put_the_red_mug_on_the_right_plate.bddl  LIVING_ROOM_DISTRACTOR_SCENE5_put_the_white_mug_on_the_left_plate.bddl  LIVING_ROOM_DISTRACTOR_SCENE6_put_the_chocolate_pudding_to_the_right_of_the_plate.bddl  LIVING_ROOM_DISTRACTOR_SCENE6_put_the_white_mug_on_the_plate.bddl  STUDY_DISTRACTOR_SCENE1_pick_up_the_book_and_place_it_in_the_right_compartment_of_the_caddy.bddl  STUDY_DISTRACTOR_SCENE2_pick_up_the_book_and_place_it_in_the_back_compartment_of_the_caddy.bddl  STUDY_DISTRACTOR_SCENE2_pick_up_the_book_and_place_it_in_the_front_compartment_of_the_caddy.bddl  STUDY_DISTRACTOR_SCENE2_pick_up_the_book_and_place_it_in_the_right_compartment_of_the_caddy.bddl  (+3 more)
adapt3r/envs/libero/init_states/libero_90_iiwa/: KITCHEN_SCENE6_close_the_microwave.init  (+41 more)
adapt3r/envs/libero/robots/: __init__.py  mounted_iiwa.py  on_the_ground_iiwa.py  on_the_ground_kinova3.py  on_the_ground_sawyer.py  on_the_ground_ur5e.py
adapt3r/envs/mimicgen/: generate_mimicgen_init_states.py  generate_mimicgen_robot_change_init_states.py  pyproject.toml  runner.py  utils.py  wrappers.py
adapt3r/envs/mimicgen/init_states/: coffee_d1.init  coffee_d1_IIWA.init  coffee_d1_Kinova3.init  coffee_d1_UR5e.init  square_d1.init  square_d1_IIWA.init  square_d1_Kinova3.init  square_d1_UR5e.init  threading_d1.init  threading_d1_IIWA.init  threading_d1_Kinova3.init  threading_d1_UR5e.init
(+581 files in other folders)
