[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libero"
version = "0.1.0"
description = "LIBERO: Benchmarking Knowledge Transfer for Lifelong Robot Learning"
authors = [
    { name = "Bo Liu", email = "bliu@cs.utexas.edu" },
    { name = "Yifeng Zhu", email = "yifengz@cs.utexas.edu" },
    { name = "Chongkai Gao" },
    { name = "Yihao Feng" },
    { name = "Qiang Liu" },
    { name = "Yuke Zhu" },
    { name = "Peter Stone" }
]
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["libero*"]

[tool.setuptools]
include-package-data = true
eager-resources = ["*"]
